--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -39,12 +39,14 @@ source "{{ zsh_antigen_path_compat }}/antigen/antigen.zsh"
 
 antigen use oh-my-zsh
 
+alias fd=fdfind # for correct working of sorenson-axial/fzf-widgets
+
 {% set bundles_enabled = [] %}
 
 {% for bundle in zsh_antigen_bundles -%}
     {%- if bundle is mapping -%}
         {% set valid = true -%}
-        {%- set command_exists = true -%}
+            {% set command_not_exists = [] -%}
 
         {%- if bundle.when is defined and not bundle.when -%}
             {% set valid = false -%}
@@ -53,12 +55,12 @@ antigen use oh-my-zsh
         {% if bundle.command is defined -%}
             {% for cmd in zsh_register_commands_exists.results -%}
                 {% if cmd.cmd is defined and cmd.rc != 0 and cmd.item.command == bundle.command -%}
-                    {%- set command_exists = false -%}
+                    {% if command_not_exists.append(1) %}{% endif -%}
                 {% endif -%}
             {% endfor -%}
         {% endif -%}
 
-        {% if valid and command_exists %}
+        {% if valid and not command_not_exists %}
             {%- if 'zsh-syntax-highlighting' in bundle.name or 'fast-syntax-highlighting' in bundle.name -%}
 # will fixed in zsh-autosuggestion v0.4 - https://github.com/zsh-users/zsh-autosuggestions/pull/218
 if (( ZSHRC_LOAD_ONCE++ == 0 )); then
